--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -5,5 +5,8 @@
   text-align: center;
   display: flex;
   justify-content: space-around;
+  align-items: center; /* added */
   height: 10rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* added */
+  transition: box-shadow 0.2s ease-in-out; /* added */
 }
