--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -8,23 +8,34 @@
 .chart-bar__inner {
   height: 100%;
   width: 100%;
-  border: 1px solid #313131;
   border-radius: 12px;
   background-color: #c3b4f3;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse; /* changed */
   justify-content: flex-end;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); /* added */
+  transition: box-shadow 0.2s ease-in-out; /* added */
+}
+
+.chart-bar__inner:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* added */
 }
 
 .chart-bar__fill {
   background-color: #4826b9;
   width: 100%;
+  height: 0%; /* added */
   transition: all 0.3s ease-out;
+}
+
+.chart-bar__inner:hover .chart-bar__fill {
+  height: 100%; /* added */
 }
 
 .chart-bar__label {
   font-weight: bold;
-  font-size: 0.5rem;
+  font-size: 0.8rem; /* increased */
   text-align: center;
+  margin-top: 0.5rem; /* added */
 }
